--- a/index.html
+++ b/index.html
@@ -24,59 +24,69 @@
     <section class="outer-line-calc">
       <div class="internal-container">
         <div class="display-container-row">
-          <div class="display"></div>
+          <div class="display">
+            <h1 class="value-calculation">
+              <span id="calculation"></span>
+              <span id="symbol"></span>
+              <span id="calculation2"></span>
+            </h1>
+            <!-- <br /> -->
+            <div class="result-container">
+              <p class="history" id="result"></p>
+            </div>
+          </div>
         </div>
         <div class="grid-main-container">
           <div class="grid-btn-container">
-            <button class="arithmetic">
+            <button class="arithmetic" onclick="additionValue()">
               <div class="grid-item">+</div>
             </button>
-            <button class="arithmetic">
+            <button class="arithmetic" onclick="subtractionValue()">
               <div class="grid-item">-</div>
             </button>
-            <button class="arithmetic">
+            <button class="arithmetic" onclick="multiplicationValue()">
               <div class="grid-item">x</div>
             </button>
-            <button class="arithmetic">
-              <div class="grid-item">/</div>
+            <button class="arithmetic" onclick="divisionValue()">
+              <div class="grid-item">÷</div>
             </button>
-            <button>
+            <button onclick="buttonClick(7)">
               <div class="grid-item">7</div>
             </button>
-            <button>
+            <button onclick="buttonClick(8)">
               <div class="grid-item">8</div>
             </button>
-            <button>
+            <button onclick="buttonClick(9)">
               <div class="grid-item">9</div>
             </button>
-            <button class="combined-column equal">
+            <button class="combined-column equal" onclick="biggerText()">
               <div class="grid-item">=</div>
             </button>
-            <button>
+            <button onclick="buttonClick(4)">
               <div class="grid-item">4</div>
             </button>
-            <button>
+            <button onclick="buttonClick(5)">
               <div class="grid-item">5</div>
             </button>
-            <button>
+            <button onclick="buttonClick(6)">
               <div class="grid-item">6</div>
             </button>
-            <button>
+            <button onclick="buttonClick(1)">
               <div class="grid-item">1</div>
             </button>
-            <button>
+            <button onclick="buttonClick(2)">
               <div class="grid-item">2</div>
             </button>
-            <button>
+            <button onclick="buttonClick(3)">
               <div class="grid-item">3</div>
             </button>
-            <button>
+            <button onclick="buttonClick(0)">
               <div class="grid-item">0</div>
             </button>
-            <button>
+            <button onclick="floatingPoint()">
               <div class="grid-item">.</div>
             </button>
-            <button>
+            <button onclick="eraseEverything()" id="changeAlpha">
               <div class="grid-item">C</div>
             </button>
 
